connect front with admin and backend for fich list in front

--- a/front/src/Components/ExploreMenu/FoodItem.css
+++ b/front/src/Components/ExploreMenu/FoodItem.css
@@ -41,6 +41,8 @@
   font-weight: 500;
   color: rgb(19, 80, 132);
   line-height: 1.4;
+  font-size: smaller;
+  text-overflow: ellipsis;
 }
 @media (max-width:450px) {
   .Food-grid {
