add all food list from backend and change the logo of the website and change some img

--- a/front/src/Components/Footer/footer.css
+++ b/front/src/Components/Footer/footer.css
@@ -23,6 +23,7 @@ margin: auto;
   cursor: pointer;
   background: transparent;
   border-radius: 100px;
+  border: 1px solid tomato;
 }
 .right-section-footer p{
   margin-top: 10px;
