--- a/front/src/Components/header/header.css
+++ b/front/src/Components/header/header.css
@@ -4,7 +4,7 @@
 .container {
   height: 50vw;
   margin: 30px auto;
-  background: url('../../assets/Logo2.jpg') center/cover no-repeatn
+  background: url('../../assets/Logo2.jpg') center/cover no-repeat;
   align-items: center;
   font-family: Arial, Helvetica, sans-serif;
   border-radius: 8px;
